stock management module done and chnages to set password and package allocation

--- a/backend/assets/global/css/sandeep.css
+++ b/backend/assets/global/css/sandeep.css
@@ -9,6 +9,12 @@
 }
 
 
+.portlet-body  .help-block  
+{
+	color: #a94442 !important;
+}
+
+
 .nopadding > .help-block  
 {
 	color: #a94442 !important;
